tests/errors/001-unknown-characters.e
@
¬
{
    "code": "0100",
    "message": "Unexpected character '@'",
    "source_file": "tests/errors/001-unknown-characters.e",
    "primary_location": {
        "line": 1,
        "column": 1
    },
    "references": [
        {
            "kind": "primary",
            "line": 1,
            "column": 1,
            "length": 1,
            "message": "Unexpected character '@'"
        }
    ],
    "notes": [],
    "help": [
        "Review the input near the failing character."
    ]
}
¬
21n
¬
{
    "code": "0100",
    "message": "Unexpected character 'n'",
    "source_file": "tests/errors/001-unknown-characters.e",
    "primary_location": {
        "line": 1,
        "column": 3
    },
    "references": [
        {
            "kind": "primary",
            "line": 1,
            "column": 3,
            "length": 1,
            "message": "Unexpected character 'n'"
        }
    ],
    "notes": [],
    "help": [
        "Review the input near the failing character."
    ]
}
